--- a/embeddings_test_1.ipynb
+++ b/embeddings_test_1.ipynb
@@ -2,11 +2,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 1,
       "metadata": {
         "id": "d36K54mY_QL6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\ethan\\Desktop\\umd\\s4 spring 2025\\HDCC209B\\UMD-Sustainability-Chatbot\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "from pinecone import Pinecone, ServerlessSpec\n",
@@ -27,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -36,7 +45,7 @@
               "True"
             ]
           },
-          "execution_count": 55,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -46,14 +55,56 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'true'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "os.getenv(\"LANGSMITH_TRACING\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "utils.tracing_is_enabled()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RXlT87Vsz0qM"
       },
       "source": [
         "Index for SentenceTransformer embeddings: \"umdsustainabilitychatbot\"\n",
+        "- dimension: 384\n",
         "\n",
-        "Index for GoogleGenerativeAI embeddings (from langchain_google_genai): \"umdsustainabilitychatbot2\" - use this"
+        "Index for GoogleGenerativeAI embeddings (from langchain_google_genai): \"umdsustainabilitychatbot2\" - use this\n",
+        "- dimension: 768"
       ]
     },
     {
@@ -65,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -74,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +152,7 @@
         "  print(\"Index doesn't exist. Creating...\")\n",
         "  pc.create_index(\n",
         "      name=index_name,\n",
-        "      dimension= 384, # Add embedding dimensions\n",
+        "      dimension= 768, # Add embedding dimensions\n",
         "      metric= \"cosine\",   # Add your similarity metric\n",
         "      spec=ServerlessSpec(\n",
         "          cloud=\"aws\",\n",
@@ -114,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -126,10 +177,10 @@
         {
           "data": {
             "text/plain": [
-              "<pinecone.data.index.Index at 0x23bc6bf6ed0>"
+              "<pinecone.data.index.Index at 0x2de276aaf60>"
             ]
           },
-          "execution_count": 58,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -141,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -161,7 +212,7 @@
               " 'vector_type': 'dense'}"
             ]
           },
-          "execution_count": 59,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -184,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 9,
       "metadata": {
         "id": "WHHl590SjHpo"
       },
@@ -403,16 +454,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "utils.tracing_is_enabled()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 11,
       "metadata": {
         "id": "1tcwV6NrVsZr"
       },
@@ -448,33 +510,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "mdvFEiaIouLJ"
       },
       "outputs": [],
       "source": [
         "google_model = \"gemini-2.0-flash-lite\"\n",
-        "system_instruction = \"\"\"\n",
-        "You are a helpful and thoughtful AI assistant designed to support the University of Maryland's\n",
-        "(UMD) sustainability-related inquiries.\n",
-        "You use only the provided context to generate responses.\n",
-        "If no context is provided, just say you don't have the capabilities for it.\n",
-        "Your tone should be clear, respectful, and supportive.\n",
-        "Avoid making assumptions if the context is missing or ambiguous.\n",
-        "Do not mention that you are getting context from somewhere.\n",
-        "Always aim to empower the user with useful and easy-to-understand guidance,\n",
-        "especially when supporting decision-making or understanding sustainability concepts.\n",
-        "Keep responses informative and avoid using technical terms unless requested.\n",
-        "If the context provided matches very well, use as much of the context as you can.\n",
-        "\"\"\"\n",
+        "system_instruction = read_text_file('model_instruction.txt')\n",
         "\n",
         "llm = ChatGoogleGenerativeAI(model=google_model)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 13,
       "metadata": {
         "id": "12yWTonQpBSQ"
       },
@@ -500,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "nGcj0IMCnSYd"
       },
@@ -525,29 +575,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "There are many student organizations on campus that focus on sustainability. You can find a highlighted list on the Office of Sustainability website and a comprehensive list on Terplink. Student groups such as the SGA Sustainability Committees and Sustainable Oceans Alliance are examples.Here are some links if you want to navigate: \n",
-            "https://sustainingprogress.umd.edu/climate-change-resources/climate-emotions\n",
-            "https://sustainingprogress.umd.edu/guiding-commitments/climate-action-plan/climate-emotions\n",
-            "https://sustainability.umd.edu/get-involved/students/become-green-terp\n",
-            "https://sustainability.umd.edu/get-involved/students/become-green-terp\n",
-            "https://sustainability.umd.edu/sustainability-education-research\n",
-            "https://sustainingprogress.umd.edu/celebrating-stories/umds-journey-curbing-waste\n",
-            "https://sustainingprogress.umd.edu/celebrating-stories/umds-journey-curbing-waste\n",
-            "https://sustainability.umd.edu/topics\n",
-            "https://sustainability.umd.edu/greenworkspace\n",
-            "https://sustainability.umd.edu/get-involved/green-office-program\n"
+            "The UMD Farmers Market takes place every Wednesday from 11 am to 3 pm at Tawes Plaza from August to November and April to May. You can stop by to enjoy fresh produce and local goods. The market features producer-only local vendors from within 250 miles of College Park. The Office of Sustainability will be at the farmers market on April 2nd, 9th, and 23rd from 11 am - 1 pm with fun sustainability-themed activities. Here are some links if you want to navigate: \n",
+            "https://sustainability.umd.edu/earth-month-2025\n",
+            "https://sustainingprogress.umd.edu/10-years-sustainable-food\n",
+            "https://sustainingprogress.umd.edu/celebrating-stories/plant-giveaway-and-pot-painting-farmers-market\n",
+            "https://sustainability.umd.edu/food\n",
+            "https://sustainability.umd.edu/sustainability-badge\n",
+            "https://sustainability.umd.edu/get-involved/staff/sustainability-badge\n",
+            "https://sustainability.umd.edu/get-involved/sustainability-badge\n",
+            "https://sustainingprogress.umd.edu/celebrating-stories/testing-waste-sorting-knowledge-farmers-market\n",
+            "https://sustainability.umd.edu/get-involved/sustainable-distancing-guide\n",
+            "https://sustainability.umd.edu/ambassadors\n"
           ]
         }
       ],
       "source": [
-        "query = \"What are some student groups on campus?\"\n",
+        "query = \"Explain more about the Farmer's Market\"\n",
         "answer = run_pipeline(query)\n",
         "print(answer)"
       ]
