worked on gradio

--- a/everything.ipynb
+++ b/everything.ipynb
@@ -2,29 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "283e723b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ethan\\Desktop\\umd\\s4 spring 2025\\HDCC209B\\UMD-Sustainability-Chatbot\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<module 'umd_webscraper' from 'c:\\\\Users\\\\ethan\\\\Desktop\\\\umd\\\\s4 spring 2025\\\\HDCC209B\\\\UMD-Sustainability-Chatbot\\\\umd_webscraper.py'>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langsmith import traceable, utils\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI, GoogleGenerativeAIEmbeddings\n",
@@ -33,11 +14,33 @@
     "import umd_rag\n",
     "import pineconing\n",
     "import umd_webscraper\n",
+    "import my_utils\n",
     "\n",
-    "import importlib\n",
+    "import importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9eec7177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'my_utils' from 'c:\\\\Users\\\\ethan\\\\Desktop\\\\umd\\\\s4 spring 2025\\\\HDCC209B\\\\UMD-Sustainability-Chatbot\\\\my_utils.py'>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "importlib.reload(umd_rag)\n",
     "importlib.reload(pineconing)\n",
-    "importlib.reload(umd_webscraper)"
+    "importlib.reload(umd_webscraper)\n",
+    "importlib.reload(my_utils)"
    ]
   },
   {
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "a66914b7",
    "metadata": {},
    "outputs": [
@@ -170,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "eebff45a",
    "metadata": {},
    "outputs": [
@@ -180,13 +183,12 @@
        "{'dimension': 768,\n",
        " 'index_fullness': 0.0,\n",
        " 'metric': 'cosine',\n",
-       " 'namespaces': {'file_data': {'vector_count': 1620},\n",
-       "                'own_data': {'vector_count': 1}},\n",
-       " 'total_vector_count': 1621,\n",
+       " 'namespaces': {'file_data': {'vector_count': 1620}},\n",
+       " 'total_vector_count': 1620,\n",
        " 'vector_type': 'dense'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e2092748",
    "metadata": {},
    "outputs": [],
@@ -240,8 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [\"umd_sustainability_data.json\",\n",
-    "         \"umd_sustainingprogress_data.json\"]\n",
+    "files = [\"datafiles/umd_sustainability_data.json\",\n",
+    "         \"datafiles/umd_sustainingprogress_data.json\"]\n",
     "\n",
     "vector_db.upsert_files(files)"
    ]
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5b7d8779",
    "metadata": {},
    "outputs": [],
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "d9c84cd2",
    "metadata": {},
    "outputs": [
@@ -285,7 +287,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "a2df1403",
    "metadata": {},
    "outputs": [],
@@ -317,24 +319,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "6cdf0da9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='UMD is committed to addressing the grand challenges of climate change and sustainability. The university recognizes the importance of healthy water, air, and ecosystems for a thriving society. UMD strives to empower students, faculty, and staff to take sustainable steps by bringing local and global systems into balance, redesigning processes to conserve resources, and experimenting with novel sustainable practices.', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash-lite', 'safety_ratings': []}, id='run-e88d329a-f153-44e1-a03e-ca17c937a61d-0', usage_metadata={'input_tokens': 1432, 'output_tokens': 72, 'total_tokens': 1504, 'input_token_details': {'cache_read': 0}})"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI:\n",
+      "UMD is committed to addressing the grand challenges of climate change and sustainability. The university recognizes that healthy water, air, and ecosystems are foundational to a thriving society. UMD aims to address sustainability issues by utilizing the campus as a living lab to develop leadership, innovation, and sustainability solutions. Students are concerned about major environmental issues and feel that the university should continue to advance efforts to address these issues.\n",
+      "\n",
+      "Metadata:\n",
+      "[{\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.77050668,\n",
+      "    \"id\": \"sustainability_119\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"Campus programs you can take part in University initiatives to address sustainability in these areas UMD's key goals, achievements, and commitments \",\n",
+      "        \"Header\": \"Explore Sustainability Topics\",\n",
+      "        \"Link\": \"https://sustainability.umd.edu/topics\",\n",
+      "        \"Site_Title\": \"Sustainability Impact Areas | SustainableUMD\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.770001054,\n",
+      "    \"id\": \"sustainingprogress_220\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"All Schools and Colleges at UMD include academic and research opportunities relating to sustainability. Staff and administrative teams throughout the university incorporate sustainability into the university operations. We're committed to addressing the grand challenges of climate change and sustainability. The SustainableUMD Network connects students, staff, faculty, and other community members to sustainability-related opportunities at UMD. This section curates a collection of resources -- reports, articles, newsletters, social media accounts, and other resources -- created by many sustainability-affiliated units across campus. \",\n",
+      "        \"Header\": \"\",\n",
+      "        \"Link\": \"https://sustainingprogress.umd.edu/celebrating-stories\",\n",
+      "        \"Site_Title\": \"Celebrating Stories | Office of Sustainability\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.76315552,\n",
+      "    \"id\": \"sustainingprogress_619\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"Each of the sections below provides an interactive summary that gives an example of UMD\\u2019s progress towards sustainability on campus and beyond. \",\n",
+      "        \"Header\": \"\",\n",
+      "        \"Link\": \"https://sustainingprogress.umd.edu/2020-2021-year-in-review\",\n",
+      "        \"Site_Title\": \"Feature Story: A Year in Review (2020-2021) | Office of Sustainability\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.756721854,\n",
+      "    \"id\": \"sustainingprogress_217\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"UMD IS INTEGRATING SUSTAINABILITY INTO CAMPUS CULTURE, ACADEMICS, RESEARCH, & OPERATIONS. \",\n",
+      "        \"Header\": \"Other Resources: Campus Leaders in Sustainability\",\n",
+      "        \"Link\": \"https://sustainingprogress.umd.edu/celebrating-stories\",\n",
+      "        \"Site_Title\": \"Celebrating Stories | Office of Sustainability\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.753802061,\n",
+      "    \"id\": \"sustainingprogress_154\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"TheGreen Office,Green TerpandGreen Chapterprograms were developed and facilitated by the Office of Sustainability in order to give students, faculty and staff support, training, and certification for adopting sustainable practices in daily life.UMD's Arboretumorganizes litter clean ups across campus, and are always looking for volunteers.UMD Facilities Managementcontinually works to improve the waste collection system, and even conducts waste audits to better understand how much of our waste could have been recycled or composted.Student Groups such as the SGA Sustainability Committees, Sustainable Oceans Alliance, MaryPIRG, and more have advocated for these and more sustainable practices on our campus, and they continue to encourage students and administration alike to push progress forward.\",\n",
+      "        \"Header\": \"More:\",\n",
+      "        \"Link\": \"https://sustainingprogress.umd.edu/celebrating-stories/umds-journey-curbing-waste\",\n",
+      "        \"Site_Title\": \"UMD's Journey to Curbing Waste | Office of Sustainability\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.752723,\n",
+      "    \"id\": \"sustainability_74\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"Addressing sustainability is essential because healthy water, healthy air, and healthy ecosystems are foundational to a thriving society.  Higher education institutions, such as the University of Maryland, are in a unique position to advance sustainability solutions, awareness, and action. Over 50,000 students, faculty and staff live, work, research and study on campus each day. From energy and water use to transportation and food services, UMD has continual opportunities to cultivate a culture of sustainability while conducting critical research that guides sustainability policy and innovation here and around the world. UMD strives to empower students, faculty and staff to take sustainable steps by bringing local and global systems into balance, redesigning processes to conserve resources, and experimenting with novel sustainable practices. We recognize the power of higher education to influence broader change, empower youth with skills and understanding, and integrate change by serving as an immersive learning lab for education, research, experience and civic engagement. UMD aims to serve as an example for society to facilitate the crucial cultural, functional, and technological transitions to a world that supports everyone. The Office of Sustainability compiles and communicates sustainability efforts from across campus and supports the SustainableUMD network. SustainableUMD refers to the campus-wide commitment to environmental responsibility.  Every person contributes to UMD's impacts and every aspect of campus affects the university's sustainability performance. Regardless of where on campus one works, studies, or lives, each person can help advance sustainability. By integrating academics, research, operations, and student engagement, the campus community can model and leverage broader change. Within the campus, UMD is innovating sustainable solutions, immersing students in a healthy and inspiring environment, and modeling a demonstration for more green communities. \",\n",
+      "        \"Header\": \"SustainableUMD\",\n",
+      "        \"Link\": \"https://sustainability.umd.edu/about\",\n",
+      "        \"Site_Title\": \"About | SustainableUMD\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.749276459,\n",
+      "    \"id\": \"sustainability_171\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"Opportunities are endless to incorporate sustainability into research and learning. From degree programs to research projects to living-learning programs, students and faculty learn, enhance, and find support for addressing sustainability issues. By utilizing the campus as a living lab, our campus community develops leadership, innovation, and sustainability solutions to address theGrand Challengesof our time \\u2014 ranging from climate change to hunger to clean water shortages. The University of Maryland offers students hands-on opportunities to develop the skills to solve sustainability dilemmas, alongside the visionary faculty who champion environmental progress.  \",\n",
+      "        \"Header\": \"Innovations for Sustainable Solutions\",\n",
+      "        \"Link\": \"https://sustainability.umd.edu/sustainability-education-research\",\n",
+      "        \"Site_Title\": \"Sustainability Education & Research | SustainableUMD\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.748432279,\n",
+      "    \"id\": \"sustainingprogress_75\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"Beyond internally set goals and climate strategies, UMD's operational programs to support sustainability are guided by an array of voluntary commitments and regulatory requirements. UMD aims to foster a culture of sustainability and act as a leader in voluntary and regulated environmental stewardship by going above and beyond the call of action. Explore other commitments and regulations that help UMD become more sustainable. \",\n",
+      "        \"Header\": \"Other Commitments\",\n",
+      "        \"Link\": \"https://sustainingprogress.umd.edu/progress-commitments\",\n",
+      "        \"Site_Title\": \"Sustainability Goals & Commitments | Office of Sustainability\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.747681081,\n",
+      "    \"id\": \"sustainability_108\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"Beyond internally set goals and climate strategies, UMD's operational programs to support sustainability are guided by an array of voluntary commitments and regulatory requirements. UMD aims to foster a culture of sustainability and act as a leader in environmental stewardship by going above and beyond the call of action.Coming Soon\",\n",
+      "        \"Header\": \"\",\n",
+      "        \"Link\": \"https://sustainability.umd.edu/progress-commitments/other-commitments\",\n",
+      "        \"Site_Title\": \"Our Commitments | SustainableUMD\"\n",
+      "    }\n",
+      "}, {\n",
+      "    \"namespace\": \"file_data\",\n",
+      "    \"score\": 0.746988058,\n",
+      "    \"id\": \"sustainingprogress_553\",\n",
+      "    \"values\": [],\n",
+      "    \"metadata\": {\n",
+      "        \"Content\": \"Overall, the results of the survey indicate that students are concerned about major environmental issues that our society faces and feel that the university should continue to advance efforts to address these issues. It also highlights personal versus institutional responsibility to sustainability.  Understanding more about how students relate to sustainability, their personal values, and their lifestyle choices is essential in shaping outreach, education, and opportunities that align with their values and priorities. By continually fostering a campus culture that prioritizes sustainability, UMD enhances student engagement and empowers student leaders to advocate for innovative solutions to the pressing challenges of climate change.  \",\n",
+      "        \"Header\": \"\",\n",
+      "        \"Link\": \"https://sustainingprogress.umd.edu/celebrating-stories/2018-student-concern-environment-has-increased\",\n",
+      "        \"Site_Title\": \"Since 2018, Student Concern for the Environment has Increased | Office of Sustainability\"\n",
+      "    }\n",
+      "}]\n"
+     ]
     }
    ],
    "source": [
-    "rag.pipe(\"What are some of the challenges of sustainability at UMD?\")\n"
+    "piped = rag.pipe(\"What are some of the challenges of sustainability at UMD?\", include_metadata=True)\n",
+    "print(f\"AI:\\n{piped['answer'].content}\")\n",
+    "print()\n",
+    "meta = piped['metadata']\n",
+    "print(f\"Metadata:\\n{meta}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c11d2e0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 3 retrieved documents:\n",
+      "1. sustainability_119\n",
+      "- Text: Campus programs you can take part in University initiatives to address sustainability in these areas UMD's key goals, achievements, and commitments \n",
+      "- Link: https://sustainability.umd.edu/topics\n",
+      "- Score: 0.77050668\n",
+      "\n",
+      "2. sustainingprogress_220\n",
+      "- Text: All Schools and Colleges at UMD include academic and research opportunities relating to sustainability. Staff and administrative teams throughout the university incorporate sustainability into the university operations. We're committed to addressing the grand challenges of climate change and sustainability. The SustainableUMD Network connects students, staff, faculty, and other community members to sustainability-related opportunities at UMD. This section curates a collection of resources -- reports, articles, newsletters, social media accounts, and other resources -- created by many sustainability-affiliated units across campus. \n",
+      "- Link: https://sustainingprogress.umd.edu/celebrating-stories\n",
+      "- Score: 0.770001054\n",
+      "\n",
+      "3. sustainingprogress_619\n",
+      "- Text: Each of the sections below provides an interactive summary that gives an example of UMD’s progress towards sustainability on campus and beyond. \n",
+      "- Link: https://sustainingprogress.umd.edu/2020-2021-year-in-review\n",
+      "- Score: 0.76315552\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = my_utils.organize_retrieval(meta)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b49723d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
