--- a/everything.ipynb
+++ b/everything.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "283e723b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ethan\\Desktop\\umd\\s4 spring 2025\\HDCC209B\\UMD-Sustainability-Chatbot\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langsmith import traceable, utils\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI, GoogleGenerativeAIEmbeddings\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "9eec7177",
    "metadata": {},
    "outputs": [
@@ -31,7 +40,7 @@
        "<module 'my_utils' from 'c:\\\\Users\\\\ethan\\\\Desktop\\\\umd\\\\s4 spring 2025\\\\HDCC209B\\\\UMD-Sustainability-Chatbot\\\\my_utils.py'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ad2f134a",
    "metadata": {},
    "outputs": [
@@ -63,7 +72,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "a66914b7",
    "metadata": {},
    "outputs": [
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "eebff45a",
    "metadata": {},
    "outputs": [
@@ -183,18 +192,39 @@
        "{'dimension': 768,\n",
        " 'index_fullness': 0.0,\n",
        " 'metric': 'cosine',\n",
-       " 'namespaces': {'file_data': {'vector_count': 1620}},\n",
-       " 'total_vector_count': 1620,\n",
+       " 'namespaces': {'file_data': {'vector_count': 1620},\n",
+       "                'own_data': {'vector_count': 2}},\n",
+       " 'total_vector_count': 1622,\n",
        " 'vector_type': 'dense'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vector_db.index.describe_index_stats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d0d57a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = []\n",
+    "for v in vector_db.index.list(namespace='own_data'):\n",
+    "    ids.extend(v)\n",
+    "\n",
+    "fr = vector_db.index.fetch(ids=ids, namespace='own_data')\n",
+    "vectors = fr.vectors #dict\n",
+    "\n",
+    "added_data = []\n",
+    "for key in sorted(vectors.keys()):\n",
+    "    value = vectors[key]\n",
+    "    added_data.append(value.metadata['Content'])"
    ]
   },
   {
@@ -210,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "e2092748",
    "metadata": {},
    "outputs": [],
@@ -258,13 +288,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5b7d8779",
    "metadata": {},
    "outputs": [],
    "source": [
-    "our_data = \"The shortened link for our water refilling stations is ter.ps/heartthetap\"\n",
+    "our_data = \"The shortened link for the water refilling stations website is https://ter.ps/heartthetap\"\n",
     "vector_db.upsert_own_data(our_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "875b1a8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_db.index.delete(delete_all=True, namespace='own_data')"
    ]
   },
   {
