--- a/everything.ipynb
+++ b/everything.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "283e723b",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9eec7177",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "<module 'my_utils' from 'c:\\\\Users\\\\ethan\\\\Desktop\\\\umd\\\\s4 spring 2025\\\\HDCC209B\\\\UMD-Sustainability-Chatbot\\\\my_utils.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ad2f134a",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a66914b7",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "eebff45a",
    "metadata": {},
    "outputs": [
@@ -192,13 +192,12 @@
        "{'dimension': 768,\n",
        " 'index_fullness': 0.0,\n",
        " 'metric': 'cosine',\n",
-       " 'namespaces': {'file_data': {'vector_count': 1620},\n",
-       "                'own_data': {'vector_count': 2}},\n",
-       " 'total_vector_count': 1622,\n",
+       " 'namespaces': {'file_data': {'vector_count': 1620}},\n",
+       " 'total_vector_count': 1620,\n",
        " 'vector_type': 'dense'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5b7d8779",
    "metadata": {},
    "outputs": [],
@@ -298,24 +297,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77548ba2",
+   "metadata": {},
+   "source": [
+    "Delete data and reset count"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "875b1a8a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vector_db.index.delete(delete_all=True, namespace='own_data')"
+    "vector_db.index.delete(delete_all=True, namespace='own_data')\n",
+    "with open(\"datafiles/own_data_id_count.txt\", 'r+') as file:\n",
+    "    file.seek(0)\n",
+    "    file.write('0')"
    ]
   },
   {
